--- a/code/src/layout/header.css
+++ b/code/src/layout/header.css
@@ -4,12 +4,32 @@
 /* 头部导航条 */
 
 .bacra-header {
+    display: flex;
     position: fixed;
     box-sizing: border-box;
     width: 100%;
     max-width: 640px;
     height: 2.3rem;
+    line-height: 2.3rem;
+    text-align: center;
     top: 0;
     z-index: 200;
     border-bottom: 1px solid #ddd;
+}
+
+.bacra-header>.left {
+    flex: 3rem;
+    flex-shrink: 0;
+}
+
+.bacra-header>.title {
+    flex-grow: 1;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.bacra-header>.right {
+    flex: 3rem;
+    flex-shrink: 0;
 }
