--- a/code/src/layout/navbar.css
+++ b/code/src/layout/navbar.css
@@ -2,11 +2,32 @@
 
 .bacra-navbar {
     position: fixed;
+    display: flex;
     box-sizing: border-box;
     bottom: 0;
     width: 100%;
+    text-align: center;
     max-width: 640px;
     height: 2.5rem;
     border-top: 1px solid #ddd;
     z-index: 200;
+}
+
+.bacra-navbar>.navbar-item {
+    flex: 1;
+    color: #808080;
+}
+
+.bacra-navbar>.navbar-item :hover {
+    color: #09BB07;
+}
+
+.icon {
+    padding: .3rem 0 0.1rem;
+    font-size: 1.1rem;
+}
+
+.navbar-item .name {
+    display: block;
+    font-size: 0.5rem;
 }
